# proyectoTinyML

./: .gitignore  README.md  requirements.txt  tree.txt
code/: cuantizacion.py  mobileNetV2.py  modelosIniciales.py  pruebaCuantizado.py
code/creacionModelos/: mobileNetV2.py  modelosIniciales.py
code/cuantizacion/: cuantizacion.py  pruebaCuantizado.py
datasets/: conversion_imagenes.py  conversion_imagenes_byn.py  datasetCompleto.txt
datasets/imagenesReales/: convertidas.txt
models/: model_data.cc  modelo_224x224_base.tflite  modelo_224x224_int8.tflite  modelo_224x224_original.keras  modelo_96x96_base.tflite  modelo_96x96_int8.tflite  modelo_96x96_original.keras  modelo_caracoles_base.tflite  modelo_caracoles_original.keras
models/modelo1/: modelo1_96x96_int8.tflite
models/modelo2/: modelo2_96x96_int8.tflite
models/modelo3/: model_data.cc  modelo3_96x96.keras  modelo3_96x96.tflite  modelo3_96x96_int8.tflite
models/modeloMobileNetV2_224x224/: model_data.cc  modelo_mobileNetV2_224x224.keras  modelo_mobileNetV2_224x224.tflite  modelo_mobileNetV2_224x224_int8.tflite
models/modeloMobileNetV2_96x96/: model_data.cc  modelo_mobileNetV2_96x96.keras  modelo_mobileNetV2_96x96.tflite  modelo_mobileNetV2_96x96_int8.tflite
src/: CMakeLists.txt
src/deteccionCaracoles/: CMakeLists.txt
src/deteccionCaracoles/deteccionCaracoles/: CMakeLists.txt  imagen_prueba.cpp  imagen_prueba.h  main_functions.cpp  model_data_96x96.cpp  model_data_96x96.h
src/examples/deteccion_caracol_modelo3/: CMakeLists.txt  imagen_prueba.cpp  main.cpp  main_functions.cpp  model_data.cpp  model_data.h
(+13 files in other folders)
